--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 MONGO_URL='mongodb+srv://tajjuddinmalnas21:dNOBSj5Ar3dU19MA@cluster0.gariazu.mongodb.net/?retryWrites=true&w=majority'
+NODE_ENV=production
