--- a/api/package.json
+++ b/api/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "start": "nodemon server.js",
+    "server": "nodemon server.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
