--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node index.js",
     "server": "nodemon server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "client": "npm start --prefix ./client",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.1",
     "cookie-parser": "^1.4.6",
     "cookies-parser": "^1.2.0",
     "cors": "^2.8.5",
