--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,10 @@
 {
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm start\" \"npm run client\""
+    "server": "node index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
