--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,10 @@
 {
   "engines": {
-    "node": "18.x"
+    "node": "16.13.0"
   },
   "scripts": {
     "start": "node index.js",
-    "server": "node index.js"
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
