--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,7 @@
 {
-  "engines": {
-    "node": "16.13.0"
-  },
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
